# labslabs

./: .gitignore  .replit  AUDIT_COMPLETION.md  Procfile  README.md  STARTUP.md  package-lock.json  pyproject.toml  requirements.txt
agents/: README.md  __init__.py  band_utils.py  chief_complaint_chart.py  escalation_adapter.py  escalation_agent.py  moderator_adapter.py  moderator_agent.py  moderator_graph.py  moderator_logic.py  moderator_prompts.py  moderator_schema.py  pairwise_comparator.py  pairwise_prompts.py  review_adapter.py  review_agent.py  review_graph.py  review_prompts.py  review_schema.py  router_adapter.py  router_agent.py  router_logic.py  router_schema.py  run_escalation.py  run_moderator.py  run_review.py  run_router.py  shared_schema.py
api/: __init__.py  __main__.py  app.py  simulation.py
data/: input.csv
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/docs/: user-guide.md
frontend/src/: routeTree.gen.ts  server.ts  styles.css
frontend/src/hooks/: useLiveQueue.ts  useNotifications.tsx  useSharedLiveQueue.tsx
frontend/src/lib/: backend-api.ts  queue-models.ts
frontend/src/routes/: __root.tsx  analytics.tsx  (+3 more)
scripts/: _bootstrap.py  create_db.py  expire_human_reviews.py  human_decision.py  mock_queue_flow.py  process_next_case.py  recompute_queue.py  reset_case.py  seed_one_case.py  start_agents_sequential.sh  test_moderator.py  test_pairwise.py  test_queue_apply.py
src/labslabs/: __init__.py  band_dispatch.py
storage/: __init__.py  cases.db  db.py  queue_engine.py  queue_store.py  seed_cases.py
(+11 files in other folders)
