[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labslabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "band-sdk[langgraph]>=1.0.0",
    "certifi>=2026.5.20",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "pandas>=2.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
